--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,37 +3,13 @@
 {% load staticfiles %}
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/dlstyle.css' %}" />
-    <link href="{% static 'basic/css/demo.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/hmstyle.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'css/seastyle.css' %}"  rel="stylesheet" type="text/css" />
-    <link type="text/css" href="{% static 'css/optstyle.css' %}" rel="stylesheet" />
-    <link type="text/css" href="{% static 'css/style.css' %}" rel="stylesheet" />
-    <script type="text/javascript" src="{% static 'js/jquery-1.7.2.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.flexslider.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery.imagezoom.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/list.js' %}"></script>
-    <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}../"></script>
-    <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'basic/js/quick_links.js' %}"></script>
 
-
-{#    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>#}
-{#    {% block page_css %}{% endblock %}#}
-{#    {% block page_jq %}{% endblock %}#}
+    {% block css %}{% endblock %}
 </head>
 <body>
-{% block page_head %}
-{#    {% include 'include/head.html' %}#}
-{% endblock %}
-
-{#    {% block page_head %}{% endblock %}#}
-{#    {% block page_main %}{% endblock %}#}
-{#    {% block page_footer %}{% endblock %}#}
-    {% block content %}{% endblock %}
-{#    {% include 'include/footer.html' %}#}
+{% block content %}{% endblock %}
 </body>
 </html>
