--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,14 @@
 {% extends 'base/base.html' %}
+{% load staticfiles %}
+{% block css %}
+    <link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css'   %}" rel="stylesheet" />
+    <link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'basic/css/demo.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'css/hmstyle.css' %}" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}../"></script>
+    <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.min.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     {% include 'include/head.html' %}
         <b class="line"></b>
