--- a/templates/detail/detail.html
+++ b/templates/detail/detail.html
@@ -4,6 +4,8 @@
 
 {% load staticfiles %}
 {% block css %}
+    <link href="{% static 'AmazeUI-2.4.2/assets/css/admin.css' %}" rel="stylesheet" type="text/css" />
+		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'basic/css/demo.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/optstyle.css' %}" rel="stylesheet" />
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
