--- a/templates/detail/detail.html
+++ b/templates/detail/detail.html
@@ -90,13 +90,13 @@
 						<div class="flexslider">
 							<ul class="slides">
 								<li>
-									<img src="../images/01.jpg" title="pic" />
+									<img src="{% static 'images/01.jpg' %}" title="pic" />
 								</li>
 								<li>
-									<img src="../images/02.jpg" />
+									<img src="{% static 'images/02.jpg' %}" />
 								</li>
 								<li>
-									<img src="../images/03.jpg" />
+									<img src="{% static 'images/03.jpg' %}" />
 								</li>
 							</ul>
 						</div>
@@ -119,22 +119,22 @@
 							</script>
 
 							<div class="tb-booth tb-pic tb-s310">
-								<a href="../images/01.jpg"><img src="../images/01_mid.jpg" alt="细节展示放大镜特效" rel="../images/01.jpg" class="jqzoom" /></a>
+								<a href="../images/01.jpg"><img src="{% static 'images/01_mid.jpg' %}" alt="细节展示放大镜特效" rel="../images/01.jpg" class="jqzoom" /></a>
 							</div>
 							<ul class="tb-thumb" id="thumblist">
 								<li class="tb-selected">
 									<div class="tb-pic tb-s40">
-										<a href="#"><img src="../images/01_small.jpg" mid="../images/01_mid.jpg" big="../images/01.jpg"></a>
+										<a href="#"><img src="{% static 'images/01_small.jpg' %}" mid="{% static 'images/01_mid.jpg' %}" big="{% static 'images/01.jpg' %}"></a>
 									</div>
 								</li>
 								<li>
 									<div class="tb-pic tb-s40">
-										<a href="#"><img src="../images/02_small.jpg" mid="../images/02_mid.jpg" big="../images/02.jpg"></a>
+										<a href="#"><img src="{% static 'images/02_small.jpg' %}" mid="{% static 'images/02_mid.jpg' %}" big="{% static 'images/02.jpg' %}"></a>
 									</div>
 								</li>
 								<li>
 									<div class="tb-pic tb-s40">
-										<a href="#"><img src="../images/03_small.jpg" mid="../images/03_mid.jpg" big="../images/03.jpg"></a>
+										<a href="#"><img src="{% static 'images/03_small.jpg' %}" mid="{% static 'images/03_mid.jpg' %}" big="{% static 'images/03.jpg' %}"></a>
 									</div>
 								</li>
 							</ul>
@@ -318,14 +318,14 @@
 						<ul class="like_list">
 							<li>
 								<div class="s_picBox">
-									<a class="s_pic" href="#"><img src="../images/cp.jpg"></a>
+									<a class="s_pic" href="#"><img src="{% static 'images/cp.jpg' %}"></a>
 								</div> <a class="txt" target="_blank" href="#">萨拉米 1+1小鸡腿</a>
 								<div class="info-box"> <span class="info-box-price">¥ 29.90</span> <span class="info-original-price">￥ 199.00</span> </div>
 							</li>
 							<li class="plus_icon"><i>+</i></li>
 							<li>
 								<div class="s_picBox">
-									<a class="s_pic" href="#"><img src="../images/cp2.jpg"></a>
+									<a class="s_pic" href="#"><img src="{% static 'images/cp2.jpg' %}"></a>
 								</div> <a class="txt" target="_blank" href="#">ZEK 原味海苔</a>
 								<div class="info-box"> <span class="info-box-price">¥ 8.90</span> <span class="info-original-price">￥ 299.00</span> </div>
 							</li>
@@ -353,7 +353,7 @@
 						     	
 							      <li class="first">
 							      	<div class="p-img">                    
-							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
+							      		<a  href="#"> <img class="" src="{% static 'images/browse1.jpg' %}"> </a>
 							      	</div>
 							      	<div class="p-name"><a href="#">
 							      		【三只松鼠_开口松子】零食坚果特产炒货东北红松子原味
@@ -363,7 +363,7 @@
 							      </li>
 							      <li>
 							      	<div class="p-img">                    
-							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
+							      		<a  href="#"> <img class="" src="{% static 'images/browse1.jpg' %}"> </a>
 							      	</div>
 							      	<div class="p-name"><a href="#">
 							      		【三只松鼠_开口松子】零食坚果特产炒货东北红松子原味
@@ -373,7 +373,7 @@
 							      </li>
 							      <li>
 							      	<div class="p-img">                    
-							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
+							      		<a  href="#"> <img class="" src="{% static 'images/browse1.jpg' %}"> </a>
 							      	</div>
 							      	<div class="p-name"><a href="#">
 							      		【三只松鼠_开口松子】零食坚果特产炒货东北红松子原味
@@ -383,7 +383,7 @@
 							      </li>							      
 							      <li>
 							      	<div class="p-img">                    
-							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
+							      		<a  href="#"> <img class="" src="{% static 'images/browse1.jpg' %}"> </a>
 							      	</div>
 							      	<div class="p-name"><a href="#">
 							      		【三只松鼠_开口松子】零食坚果特产炒货东北红松子原味
@@ -393,7 +393,7 @@
 							      </li>							      
 							      <li>
 							      	<div class="p-img">                    
-							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
+							      		<a  href="#"> <img class="" src="{% static 'images/browse1.jpg' %}"> </a>
 							      	</div>
 							      	<div class="p-name"><a href="#">
 							      		【三只松鼠_开口松子218g】零食坚果特产炒货东北红松子原味
@@ -457,13 +457,13 @@
 											<h4>商品细节</h4>
 										</div>
 										<div class="twlistNews">
-											<img src="../images/tw1.jpg" />
-											<img src="../images/tw2.jpg" />
-											<img src="../images/tw3.jpg" />
-											<img src="../images/tw4.jpg" />
-											<img src="../images/tw5.jpg" />
-											<img src="../images/tw6.jpg" />
-											<img src="../images/tw7.jpg" />
+											<img src="{% static 'images/tw1.jpg' %}" />
+											<img src="{% static 'images/tw2.jpg' %}" />
+											<img src="{% static 'images/tw3.jpg' %}" />
+											<img src="{% static 'images/tw4.jpg' %}" />
+											<img src="{% static 'images/tw5.jpg' %}" />
+											<img src="{% static 'images/tw6.jpg' %}" />
+											<img src="{% static 'images/tw7.jpg' %}" />
 										</div>
 									</div>
 									<div class="clear"></div>
@@ -529,7 +529,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -563,7 +563,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -597,7 +597,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -631,7 +631,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -665,7 +665,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -699,7 +699,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -733,7 +733,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -767,7 +767,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -800,7 +800,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -834,7 +834,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -868,7 +868,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -902,7 +902,7 @@
 										<li class="am-comment">
 											<!-- 评论容器 -->
 											<a href="">
-												<img class="am-comment-avatar" src="../images/hwbn40x40.jpg" />
+												<img class="am-comment-avatar" src="{% static 'images/hwbn40x40.jpg' %}" />
 												<!-- 评论者头像 -->
 											</a>
 
@@ -960,7 +960,7 @@
 										<ul class="am-avg-sm-2 am-avg-md-3 am-avg-lg-4 boxes">
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -971,7 +971,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -982,7 +982,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -993,7 +993,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1004,7 +1004,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1015,7 +1015,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1026,7 +1026,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1037,7 +1037,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1048,7 +1048,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1059,7 +1059,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1070,7 +1070,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1081,7 +1081,7 @@
 											</li>
 											<li>
 												<div class="i-pic limit">
-													<img src="../images/imgsearch1.jpg" />
+													<img src="{% static 'images/imgsearch1.jpg' %}" />
 													<p>【良品铺子_开口松子】零食坚果特产炒货
 														<span>东北红松子奶油味</span></p>
 													<p class="price fl">
@@ -1147,7 +1147,7 @@
 							</a>
 							<div class="ibar_login_box status_login">
 								<div class="avatar_box">
-									<p class="avatar_imgbox"><img src="../images/no-img_mid_.jpg" /></p>
+									<p class="avatar_imgbox"><img src="{% static 'images/no-img_mid_.jpg' %}" /></p>
 									<ul class="user_info">
 										<li>用户名：sl1903</li>
 										<li>级&nbsp;别：普通会员</li>
@@ -1192,7 +1192,7 @@
 
 						<div id="brand" class="item">
 							<a href="#">
-								<span class="wdsc"><img src="../images/wdsc.png" /></span>
+								<span class="wdsc"><img src="{% static 'images/wdsc.png' %}" /></span>
 							</a>
 							<div class="mp_tooltip">
 								我的收藏
@@ -1202,7 +1202,7 @@
 
 						<div id="broadcast" class="item">
 							<a href="#">
-								<span class="chongzhi"><img src="../images/chongzhi.png" /></span>
+								<span class="chongzhi"><img src="{% static 'images/chongzhi.png' %}" /></span>
 							</a>
 							<div class="mp_tooltip">
 								我要充值
@@ -1218,7 +1218,7 @@
 							<!--二维码 -->
 							<li class="qtitem">
 								<a href="#none"><span class="mpbtn_qrcode"></span></a>
-								<div class="mp_qrcode" style="display:none;"><img src="../images/weixin_code_145.png" /><i class="icon_arrow_white"></i></div>
+								<div class="mp_qrcode" style="display:none;"><img src="{% static 'images/weixin_code_145.png' %}" /><i class="icon_arrow_white"></i></div>
 							</li>
 							<li class="qtitem">
 								<a href="#top" class="return_top"><span class="top"></span></a>
