--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                       <!--轮播 -->
                     <div class="am-slider am-slider-default scoll" data-am-flexslider id="demo-slider-0">
                         <ul class="am-slides">
-                            <li class="banner1"><a href="introduction.html"><img src="{% static 'images/ad5.jpg' %}" /></a></li>
+                            <li class="banner1"><a href="#"><img src="{% static 'images/ad5.jpg' %}" /></a></li>
                             <li class="banner2"><a><img src="{% static 'images/ad6.jpg' %}" /></a></li>
                             <li class="banner3"><a><img src="{% static 'images/ad7.jpg' %}" /></a></li>
                             <li class="banner4"><a><img src="{% static 'images/ad8.jpg' %}" /></a></li>
