--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -118,7 +118,7 @@
 
 								<li>
 									<div class="i-pic check">
-										<img src="../images/cp.jpg" />
+										<img src="{% static 'images/cp.jpg' %}" />
 										<p class="check-title">萨拉米 1+1小鸡腿</p>
 										<p class="price fl">
 											<b>¥</b>
@@ -131,7 +131,7 @@
 								</li>
 								<li>
 									<div class="i-pic check">
-										<img src="../images/cp2.jpg" />
+										<img src="{% static 'images/cp2.jpg' %}" />
 										<p class="check-title">ZEK 原味海苔</p>
 										<p class="price fl">
 											<b>¥</b>
@@ -144,7 +144,7 @@
 								</li>
 								<li>
 									<div class="i-pic check">
-										<img src="../images/cp.jpg" />
+										<img src="{% static 'images/cp.jpg' %}" />
 										<p class="check-title">萨拉米 1+1小鸡腿</p>
 										<p class="price fl">
 											<b>¥</b>
@@ -199,7 +199,7 @@
 			<li><a href="home2.html"><i class="am-icon-home "></i>首页</a></li>
 			<li><a href="sort.html"><i class="am-icon-list"></i>分类</a></li>
 			<li><a href="shopcart.html"><i class="am-icon-shopping-basket"></i>购物车</a></li>	
-			<li><a href="../person/index.html"><i class="am-icon-user"></i>我的</a></li>					
+			<li><a href="../person/index.html"><i class="am-icon-user"></i>我的</a></li>
 		</div>
 
 		<!--菜单 -->
