--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,11 +10,11 @@
 {% block content %}
 
 	<div class="login-boxtitle">
-        <a href="home.html"><img alt="logo" src="../images/logobig.png" /></a>
+        <a href="home.html"><img alt="logo" src="{% static 'images/logobig.png' %}" /></a>
     </div>
     <div class="login-banner">
         <div class="login-main">
-            <div class="login-banner-bg"><span></span><img src="../images/big.jpg" /></div>
+            <div class="login-banner-bg"><span></span><img src="{% static 'images/big.jpg' %}" /></div>
             <div class="login-box">
                 <h3 class="title">登录商城</h3>
                 <div class="clear"></div>
