--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -9,11 +9,11 @@
 {% endblock %}
 {% block content %}
     <div class="login-boxtitle">
-        <a href="home/demo.html"><img alt="" src="../images/logobig.png" /></a>
+        <a href="home/demo.html"><img alt="" src="{% static 'images/logobig.png' %}" /></a>
     </div>
     <div class="res-banner">
         <div class="res-main">
-            <div class="login-banner-bg"><span></span><img src="../images/big.jpg" /></div>
+            <div class="login-banner-bg"><span></span><img src="{% static 'images/big.jpg' %}" /></div>
             <div class="login-box">
                 <div class="am-tabs" id="doc-my-tabs">
                     <ul class="am-tabs-nav am-nav am-nav-tabs am-nav-justify">
