--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -42,8 +42,8 @@
         </div>
         <div class="search-bar pr">
             <a name="index_none_header_sysc" href="#"></a>
-            <form>
-                <input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
+            <form action="{% url "search"%}" method="get">
+                <input id="searchInput" name="keyword" type="text" placeholder="搜索" autocomplete="off">
                 <input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
             </form>
         </div>
