--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -155,7 +155,7 @@
 
 							</div>
 							<div class="clear"></div>
-							<!--分页 -->
+							<!--分页功能 -->
 							<ul class="am-pagination am-pagination-right">
                             {% if page_num.has_previous %}
 								<li class="am-disabled"><a href="{% url "paginator" %}/?page={{ page_num.previous_page_number }}">&laquo;</a></li>
