--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -23,7 +23,7 @@
                         {% csrf_token %}
                         <div class="user-name">
                             <label for="user"><i class="am-icon-user"></i></label>
-                            <input type="text" name="email" id="user" placeholder="邮箱/手机/用户名">
+                            <input type="text" name="user-name" id="user" placeholder="邮箱/手机/用户名">
                         </div>
                         <div class="user-pass">
                             <label for="password"><i class="am-icon-lock"></i></label>
@@ -36,8 +36,8 @@
                 </div>
                 <div class="login-links">
                     <label for="remember-me"><input id="remember-me" type="checkbox">记住密码</label>
-                        <a href="#" class="am-fr">忘记密码</a>
-                        <a href="register.html" class="zcnext am-fr am-btn-default">注册</a>
+                        <a href="{% url 'update' %}" class="am-fr">忘记密码</a>
+                        <a href="{% url 'register' %}" class="zcnext am-fr am-btn-default">注册</a>
                         <br />
                 </div>
 
