--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -2,18 +2,18 @@
 <title>{% block title %}注册{% endblock %}</title>
 {% load staticfiles %}
 {% block css %}
-    <link href="{% static 'css/dlstyle.css' %}" rel="stylesheet"  />
-    <link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.min.css'   %}" rel="stylesheet" />
+    <link href="{% static 'css/dlstyle.css' %}" rel="stylesheet"/>
+    <link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.min.css' %}" rel="stylesheet"/>
     <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/jquery.min.js' %}../"></script>
     <script type="text/javascript" src="{% static 'AmazeUI-2.4.2/assets/js/amazeui.js' %}"></script>
 {% endblock %}
 {% block content %}
     <div class="login-boxtitle">
-        <a href="home/demo.html"><img alt="" src="{% static 'images/logobig.png' %}" /></a>
+        <a href="home/demo.html"><img alt="" src="{% static 'images/logobig.png' %}"/></a>
     </div>
     <div class="res-banner">
         <div class="res-main">
-            <div class="login-banner-bg"><span></span><img src="{% static 'images/big.jpg' %}" /></div>
+            <div class="login-banner-bg"><span></span><img src="{% static 'images/big.jpg' %}"/></div>
             <div class="login-box">
                 <div class="am-tabs" id="doc-my-tabs">
                     <ul class="am-tabs-nav am-nav am-nav-tabs am-nav-justify">
@@ -21,70 +21,81 @@
                         <li><a href="">手机号注册</a></li>
                     </ul>
                     <div class="am-tabs-bd">
-                    <div class="am-tab-panel am-active">
-                        <form method="post" action="{% url 'register' %}">
-                            {% csrf_token %}
-                            <div class="user-email">
-                                <label for="email"><i class="am-icon-envelope-o"></i></label>
-                                <input type="email" name="email" id="email" placeholder="请输入邮箱账号">
-                            </div>
-                            <div class="user-pass">
-                                <label for="password"><i class="am-icon-lock"></i></label>
-                                <input type="password" name="password1" id="password" placeholder="设置密码">
-                            </div>
-                            <div class="user-pass">
-                                <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
-                                <input type="password" name="password2" id="passwordRepeat" placeholder="确认密码">
-             </div>
-{#                            <div class="login-links">#}
-{#                                <label for="reader-me">#}
-{#                                    <input id="reader-me" type="checkbox"> 点击表示您同意商城《服务协议》#}
-{#                                </label>#}
-{#                            </div>#}
-                            <div class="am-cf">
-                            <input type="submit" name="" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl">
-                            </div>
-                        </form>
-                        <div class="login-links">
-                            <label for="reader-me">
+                        <div class="am-tab-panel am-active">
+                            <form method="post" action="{% url 'register' %}">
+                                {% csrf_token %}
+                                <div class="user-email">
+                                    <label for="email"><i class="am-icon-envelope-o"></i></label>
+                                    <input type="email" name="email" id="email" placeholder="请输入邮箱账号">
+                                </div>
+{#                                <div class="user-name">#}
+{#                                    <label for="username"><i class="am-icon-user"></i></label>#}
+{#                                    <input type="text" name="username" id="username" placeholder="请输入昵称">#}
+{#                                </div>#}
+                                <div class="user-pass">
+                                    <label for="password"><i class="am-icon-lock"></i></label>
+                                    <input type="password" name="password1" id="password" placeholder="设置密码">
+                                </div>
+                                <div class="user-pass">
+                                    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
+                                    <input type="password" name="password2" id="passwordRepeat" placeholder="确认密码">
+                                </div>
+                                {#                            <div class="login-links">#}
+                                {#                                <label for="reader-me">#}
+                                {#                                    <input id="reader-me" type="checkbox"> 点击表示您同意商城《服务协议》#}
+                                {#                                </label>#}
+                                {#                            </div>#}
+                                <div class="am-cf">
+                                    <input type="submit" name="" value="注册"
+                                           class="am-btn am-btn-primary am-btn-sm am-fl">
+                                </div>
+                            </form>
+                            <div class="login-links">
+                                <label for="reader-me">
                                     <input id="reader-me" type="checkbox"> 点击表示您同意商城《服务协议》
                                 </label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="am-tab-panel">
-                        <form method="post">
-                            <div class="user-phone">
-                                <label for="phone"><i class="am-icon-mobile-phone am-icon-md"></i></label>
-                                <input type="tel" name="" id="phone" placeholder="请输入手机号">
-                            </div>
-                            <div class="verification">
-                                <label for="code"><i class="am-icon-code-fork"></i></label>
-                                <input type="tel" name="" id="code" placeholder="请输入验证码">
-                                <a class="btn" href="javascript:void(0);" onclick="sendMobileCode();" id="sendMobileCode">
-                                    <span id="dyMobileButton">获取</span>
-                                </a>
-                            </div>
-                            <div class="user-pass">
-                                <label for="password"><i class="am-icon-lock"></i></label>
-                                <input type="password" name="" id="password" placeholder="设置密码">
-                            </div>
-                            <div class="user-pass">
-                                <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
-                                <input type="password" name="" id="passwordRepeat" placeholder="确认密码">
-                            </div>
-                        </form>
-                        <div class="login-links">
-                            <label for="reader-me">
+                        <div class="am-tab-panel">
+                            <form method="post">
+                                <div class="user-phone">
+                                    <label for="phone"><i class="am-icon-mobile-phone am-icon-md"></i></label>
+                                    <input type="tel" name="" id="phone" placeholder="请输入手机号">
+                                </div>
+                                <div class="verification">
+                                    <label for="code"><i class="am-icon-code-fork"></i></label>
+                                    <input type="tel" name="" id="code" placeholder="请输入验证码">
+                                    <a class="btn" href="javascript:void(0);" onclick="sendMobileCode();"
+                                       id="sendMobileCode">
+                                        <span id="dyMobileButton">获取</span>
+                                    </a>
+                                </div>
+                                <div class="user-pass">
+                                    <label for="password"><i class="am-icon-lock"></i></label>
+                                    <input type="password" name="" id="password" placeholder="设置密码">
+                                </div>
+                                <div class="user-pass">
+                                    <label for="passwordRepeat"><i class="am-icon-lock"></i></label>
+                                    <input type="password" name="" id="passwordRepeat" placeholder="确认密码">
+                                </div>
+                            </form>
+                            <div class="login-links">
+                                <label for="reader-me">
                                     <input id="reader-me" type="checkbox"> 点击表示您同意商城《服务协议》
                                 </label>
+                            </div>
+
+                            <hr>
+
                         </div>
-                        <hr>
-                    </div>
-                    <script>
-                            $(function() {
+                        <div>
+                        </div>
+                        <script>
+                            $(function () {
                                 $('#doc-my-tabs').tabs();
-                              })
+                            })
                         </script>
+                        <a href="{% url 'login' %}">已有账号,点击登录</a>
                     </div>
                 </div>
             </div>
