--- a/templates/order/order.html
+++ b/templates/order/order.html
@@ -4,17 +4,14 @@
 {% block css %}
 		<link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css" />
 
-		<link href="../basic/css/demo.css" rel="stylesheet" type="text/css" />
-		<link href="../css/cartstyle.css" rel="stylesheet" type="text/css" />
+		<link href="{% static 'basic/css/demo.css'%}" rel="stylesheet" type="text/css" />
+		<link href="{% static 'css/cartstyle.css' %}" rel="stylesheet" type="text/css" />
 
-		<link href="../css/jsstyle.css" rel="stylesheet" type="text/css" />
+		<link href="{% static 'css/jsstyle.css' %}" rel="stylesheet" type="text/css" />
 
-		<script type="text/javascript" src="../js/address.js"></script>
+		<script type="text/javascript" src="{% static 'js/address.js' %}"></script>
 {% endblock %}
-	</head>
-
-	<body>
-
+{% block content %}
 		<!--顶部导航条 -->
 		<div class="am-container header">
 			<ul class="message-l">
@@ -531,6 +528,4 @@
 			</div>
 
 			<div class="clear"></div>
-	</body>
-
-</html>
+{% endblock %}
