--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -28,10 +28,10 @@
                                     <label for="email"><i class="am-icon-envelope-o"></i></label>
                                     <input type="email" name="email" id="email" placeholder="请输入邮箱账号">
                                 </div>
-{#                                <div class="user-name">#}
-{#                                    <label for="username"><i class="am-icon-user"></i></label>#}
-{#                                    <input type="text" name="username" id="username" placeholder="请输入昵称">#}
-{#                                </div>#}
+                                <div class="user-name">
+                                    <label for="username"><i class="am-icon-user"></i></label>
+                                    <input type="text" name="username" id="username" placeholder="请输入昵称">
+                                </div>
                                 <div class="user-pass">
                                     <label for="password"><i class="am-icon-lock"></i></label>
                                     <input type="password" name="password1" id="password" placeholder="设置密码">
